--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,10 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-	{%if n is even%}
-        <H1>Number: {{ n }} is even</H1>
-	{%else%}
-	<H1>Number: {{ n }} is odd</H1>
-	{% endif %}
+        {% if n%2 == 0 %}
+            <h1>Number: {{ n }} is even!</h1>
+        {% else %}
+            <h1>Number: {{ n }} is odd!</h1>
+        {% endif %}
     </BODY>
 </HTML>
